# limitly

./: .gitattributes  .gitignore  .gitmodules  1.md  AGENTS.md  BLOCK_CONTEXT_IMPLEMENTATION.md  BUGFIX_VOID_CAST.md  BUGFIX_VOID_CAST_FINAL.md  CFG_DEBUG_ANALYSIS.md  CMakeLists - Copy.txt  CMakeLists.txt  COMPILATION_ARCHITECTURE_UPDATE.md  CONCURRENCY_FINAL_LOCKED.md  CONCURRENCY_IMPLEMENTATION_COMPLETE.md  CONCURRENCY_TESTS_FINAL_RESULTS.md  CONCURRENT_BLOCKS_ANALYSIS.md  CONCURRENT_BLOCKS_FINAL_RESULTS.md  DEBUG_GUIDE.md  DICT_IMPLEMENTATION_FINAL_REPORT.md  ENHANCED_ERROR_REPORTING_SUMMARY.md  ERRORFORMATTER_IMPLEMENTATION_SUMMARY.md  EXPRESSION_TESTS_RESULTS.md  FEATURE_PARITY_ANALYSIS.md  FINAL_FIXES.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  JIT_IMPLEMENTATION_REFERENCE.md  JIT_PARITY_COMPLETION.md  JIT_PROGRESS_REPORT.md  JIT_SUCCESS_SUMMARY.md  Limitly.cflags  Limitly.creator.user.8268c7f  Limitly.creator.user.e807857  Limitly.cxxflags  Limitly.files  Limitly.includes  Luminar.pro  MATCH_DEBUG_ANALYSIS.md  MATCH_TEST_ANALYSIS.md  MATRIX_AND_COLLECTION_TEST_REPORT.md  (+824 more)
.qtc_clangd/: compile_commands.json
backend/: ast_printer.cpp  ast_printer.hh  backend.cpp  classes.cpp  classes.hh  code_formatter.cpp  code_formatter.hh  functions.cpp  functions.hh  jit_backend.cpp  jit_backend.hh  memory.hh  memory_analyzer.hh  type_system_fwd.hh  types.hh  value.hh  vm.cpp  vm.hh
benchmarks/: loop_benchmark.lm  loop_benchmark.lm.ast.txt  loop_benchmark.lm.bytecode.txt  loop_benchmark.lm.cst.txt  loop_benchmark.lm.tokens.txt  loop_benchmark.lm.typecheck.txt  loop_benchmark.py
build_cmake/: CMakeCache.txt
doc/: error_catalog_usage.md  error_handling_performance.md  guide.md  learn.md  limit_vs_python.md  modules.md  zen.md
docs/: ABSENCE_VS_ERROR_DIFFERENTIATION.md  architecture.md  build.bat  build.sh  build_cmake.bat  contextual_hint_provider_usage.md  contributing.md  dicts.md  drift.md  error_handling_system.md  evolution.md  guide.md  language.md  learn.md  limit_vs_python.md  lir.md  modules.md  stdlib.md  structural_types_plan.md  stubs_summary.md  ui_lir_lowering.md  verification.md  zen.md
frontend/: ast.hh  parser.cpp  parser.hh  scanner.cpp  scanner.hh  test_self_member_access.lm
lyra/: AGENTS.md  Makefile  README.md  changes.md
rsp/: build_main.rsp  build_test.rsp
src/: ERROR_CODE_GENERATOR_README.md  backend.hh  benchmark_parsers.cpp  compilation_pipeline_example.cpp  compile.cpp  debugger.cpp  lsp.cpp  (+15 more)
src/backend/fyra/: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  build.sh  builder.cpp  builder.hh  changes.md  div_test  example_phpish  fyra.cpp  fyra.hh  fyra_builtin_functions.cpp  fyra_ir_generator.cpp  fyra_ir_generator.hh  main.cpp
src/backend/fyra/include/: fyra_embed.h
src/backend/fyra/include/codegen/: CodeGen.h  EnhancedCodeGen.h  InstructionFusion.h
src/backend/fyra/include/codegen/debug/: DWARFGenerator.h
src/backend/fyra/include/codegen/execgen/: Assembler.h
src/backend/fyra/include/codegen/objectgen/: ObjectFileGenerator.h  PlatformGenerators.h
src/backend/fyra/include/codegen/profiling/: RuntimeProfiler.h
src/backend/fyra/include/codegen/validation/: ASMValidator.h  TargetABIRegistry.h  ValidationTypes.h
src/backend/fyra/include/ir/: BasicBlock.h  Constant.h  Function.h  FunctionType.h  GlobalValue.h  GlobalVariable.h  IRBuilder.h  IRContext.h  Instruction.h  Module.h  Parameter.h  PhiNode.h  SIMDInstruction.h  Syscall.h  Type.h  Use.h  User.h  Value.h
src/backend/fyra/include/parser/: Lexer.h  Parser.h
src/backend/fyra/include/transforms/: ABIAnalysis.h  CFGBuilder.h  ControlFlowSimplification.h  CopyElimination.h  DeadInstructionElimination.h  DominanceFrontier.h  DominatorTree.h  ErrorReporter.h  GVN.h  LinearScanAllocator.h  LiveInterval.h  LiveIntervalAnalysis.h  LivenessAnalysis.h  LoopInvariantCodeMotion.h  Mem2Reg.h  PassError.h  PhiInsertion.h  RegAllocRewriter.h  SCCP.h  SSARenamer.h  TransformPass.h
src/backend/fyra/src/: fyra_embed.c
src/backend/fyra/src/codegen/: CodeGen.cpp  EnhancedCodeGen.cpp  InstructionFusion.cpp
src/backend/fyra/src/codegen/debug/: DWARFGenerator.cpp  DebugInfoManager.cpp
src/backend/fyra/src/codegen/execgen/: Assembler.cpp  assembler.hh  binary_writer.cpp  binary_writer.hh  elf.cpp  elf.hh  macho.cpp  macho.hh  pe.cpp  pe.hh  platform_utils.cpp  platform_utils.hh
src/backend/fyra/src/codegen/objectgen/: ObjectFileGenerator.cpp  PlatformGenerators.cpp
src/backend/fyra/src/codegen/profiling/: RuntimeProfiler.cpp
src/backend/fyra/src/codegen/validation/: ASMValidator.cpp  TargetABIRegistry.cpp  Validators.cpp
src/backend/fyra/src/ir/: BasicBlock.cpp  Constant.cpp  Function.cpp  FunctionType.cpp  GlobalVariable.cpp  IRBuilder.cpp  IRContext.cpp  Instruction.cpp  Module.cpp  Parameter.cpp  PhiNode.cpp  SIMDInstruction.cpp  Type.cpp  Use.cpp  User.cpp  Value.cpp
src/backend/fyra/src/parser/: Lexer.cpp  Parser.cpp
src/backend/fyra/src/transforms/: ABIAnalysis.cpp  CFGBuilder.cpp  ControlFlowSimplification.cpp  CopyElimination.cpp  DeadInstructionElimination.cpp  DominanceFrontier.cpp  DominatorTree.cpp  GVN.cpp  LinearScanAllocator.cpp  LiveIntervalAnalysis.cpp  LivenessAnalysis.cpp  LoopInvariantCodeMotion.cpp  Mem2Reg.cpp  PhiInsertion.cpp  RegAllocRewriter.cpp  SCCP.cpp  SSARenamer.cpp
src/backend/fyra/tests/: add_final.s  add_test.fyra  arith.fyra  complex_sccp.fyra  loop_test.fyra  reg_test.fyra  wasm_test.wat
src/error/: CMakeLists.txt  README.md  console_formatter.cpp  console_formatter.hh  console_formatter_demo.cpp  contextual_hint_demo.cpp  contextual_hint_provider.cpp  contextual_hint_provider.hh  debugger.cpp  debugger.hh  enhanced_error_reporting.hh  error_catalog.cpp  error_catalog.hh  error_catalog_demo.cpp  error_code_generator.cpp  error_code_generator.hh  error_formatter.cpp  error_formatter.hh  error_formatter_demo.cpp  error_handling.cpp  error_handling.hh  error_message.hh  ide_formatter.cpp  ide_formatter.hh  message.hh  source_code_formatter.cpp  source_code_formatter.hh  test_console_formatter.cpp  test_console_formatter_simple.cpp
(+1099 files in other folders)
